# anomaly-detection-localization

./: .env.example  .snip.yaml  Dockerfile  Justfile  README.md  pyproject.toml
app/: main.py
app/api/: __init__.py  deps.py  exception_handlers.py  health.py  metrics.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: models.py  predict.py
app/core/: config.py  exceptions.py  lifecycle.py  logging.py  metrics.py  middlewares.py
app/services/: inference.py
tests/: conftest.py
tests/integration/: test_app.py
tests/unit/: test_health.py
