[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "anamoly_detection"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.117",
    "uvicorn[standard]>=0.36.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "python-multipart>=0.0.22",
    "structlog>=25.4.0,<26.0.0",
    "prometheus-client>=0.23.0,<1.0.0",
    "psutil==7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "httpx>=0.28.1,<1.0.0",
    "ruff>=0.13.1,<1.0.0",
    "mypy>=1.18.2,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["artifacts*", "tests*"]


[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
indent-style = "space"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM", "UP"]
ignore = ["W191"]


[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
